# 3BlindMice

./: .gitignore  3BlindMiceApp.swift  3blindmice.swift  3blindmice_with_permissions.swift  CLEANUP_SUMMARY.md  HID_PERMISSIONS_GUIDE.md  Package.swift  Proposal.md  README.md  TRIANGULATION_ENHANCEMENTS.md  app.js  apple_dell_merger_antitrust.md  build.sh  config.js  fix_permissions.sh  index.html  install_icons.sh  mouse-tracker.js  six_in_one_mouse.md  styles.css
.build/: build.db  plugin-tools.yaml
.build/arm64-apple-macosx/release/: ThreeBlindMice  plugin-tools-description.json
.build/arm64-apple-macosx/release/ModuleCache/38Z9OO2VJ8GT9/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  AvailabilityMacros-1R8AB8N4VAFAG.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DarwinFoundation-1W8U2OOUAA1YQ.pcm  DataDetection-R5W4QHNMPWVH.pcm  DeveloperToolsSupport-3SUCMSK9ZS2JA.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOSurface-26455DPS9NDS0.pcm  ImageIO-2ZSF831VT29UB.pcm  MachO-20RPYVQSX341K.pcm  Metal-1GCZV9N85NJOH.pcm  OSLog-218FBXNFJGY61.pcm  ObjectiveC-1G8H182PQX3QE.pcm  OpenGL-H89XJT7GTCP.pcm  QuartzCore-39A8LQKF980J1.pcm  Security-3QCVXOV25KK54.pcm  Spatial-1JZLH83HN83CS.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  SwiftUI-3DCHKT5UWXXCX.pcm  SwiftUICore-86HIVXUC6WOA.pcm  Symbols-3KC1789KJFX94.pcm  TargetConditionals-1C41IB3E7JLP3.pcm  UniformTypeIdentifiers-1OLJP4K3PLM48.pcm  XPC-T0ZXCAST7PE3.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_intrinsics-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_iso646-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  (+57 more)
.build/arm64-apple-macosx/release/Modules/: ThreeBlindMice.swiftdoc  ThreeBlindMice.swiftmodule  ThreeBlindMice.swiftsourceinfo
.build/arm64-apple-macosx/release/ThreeBlindMice.build/: ThreeBlindMice.d  master.swiftdeps  output-file-map.json  sources
.build/arm64-apple-macosx/release/ThreeBlindMice.dSYM/Contents/Resources/DWARF/: ThreeBlindMice
.build/arm64-apple-macosx/release/ThreeBlindMice.dSYM/Contents/Resources/Relocations/aarch64/: ThreeBlindMice.yml
.build/arm64-apple-macosx/release/ThreeBlindMice.product/: Objects.LinkFileList
.github/workflows/: deploy-pages.yml
.swiftpm/xcode/package.xcworkspace/xcuserdata/alexanderfox.xcuserdatad/: UserInterfaceState.xcuserstate
.swiftpm/xcode/xcuserdata/alexanderfox.xcuserdatad/xcschemes/: xcschememanagement.plist
ThreeBlindMice/: ThreeBlindMiceApp.swift
ThreeBlindMice.xcodeproj/project.xcworkspace/xcuserdata/alexanderfox.xcuserdatad/: UserInterfaceState.xcuserstate
assets/icons/chromeos/: icon_manifest.json
assets/icons/linux/: threeblindmice.desktop
assets/icons/windows/: app_icons.rc
chromeos/: CMakeLists.txt  README.md  TEST_RESULTS.md  build.sh  package.sh  run.sh  test_chromeos.sh
chromeos/extension/: background.js  content.js  manifest.json  popup.html  popup.js
chromeos/src/c/: display_manager.c  display_manager.h  evdev_manager.c  evdev_manager.h
chromeos/src/swift/: DisplayManager.swift  MultiMouseManager.swift  main.swift
docs/: CROSS_PLATFORM_SUPPORT.md  CUSTOM_CURSOR_FEATURE.md  CUSTOM_EMOJI_FEATURE.md  GUI_CLI_FEATURE_COMPARISON.md  INDIVIDUAL_COORDINATES_SUMMARY.md  INDIVIDUAL_MOUSE_COORDINATES.md  MULTI_DISPLAY_SUPPORT.md  README.md  SCROLL_VIEW_ENHANCEMENT.md  USAGE.md  XCODE_PROJECT_VERIFICATION.md  XCODE_README.md
docs/hipaa/: BAA_TEMPLATE.md  CROSS_PLATFORM_HIPAA_COMPLIANCE.md  HIPAA_COMPLIANCE.md  INCIDENT_RESPONSE.md  PRIVACY_POLICY.md
linux/: CMakeLists.txt  README.md  TEST_RESULTS.md  build.sh  install.sh  run.sh  test_linux.sh  test_macos.sh
linux/src/c/: display_manager.c  display_manager.h  evdev_manager.c  evdev_manager.h  gui.c  gui.h  hipaa.c  hipaa.h  main.c  tray.c  tray.h
linux/src/hipaa/: HIPAADataManager.swift  HIPAASecurity.swift
linux/src/swift/: DisplayManager.swift  MultiMouseManager.swift  main.swift
linux/udev/: 99-threeblindmice.rules
macos/: Package.swift  README.md  TEST_RESULTS.md  add_display_manager.sh  test_macos.sh
macos/ThreeBlindMice/: Info.plist  ThreeBlindMice.entitlements  ThreeBlindMiceApp.swift
macos/ThreeBlindMice.xcodeproj/: project.pbxproj
macos/ThreeBlindMice.xcworkspace/: contents.xcworkspacedata
macos/ThreeBlindMice/Assets.xcassets/AccentColor.colorset/: Contents.json
macos/ThreeBlindMice/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/scripts/: build.sh  build_and_run.sh  generate_icon.sh
macos/src/cli/: 3blindmice.swift  3blindmice_with_permissions.swift
macos/src/display/: DisplayManager.swift
macos/src/utils/: CustomEmojiCursor.swift
scripts/: ICON_GENERATOR_README.md  add_icon_to_xcode.sh  cleanup_hidden_files.sh  generate_icons.js  generate_icons.py  generate_icons.sh  install_debian_deps.sh  package.json  run_release.sh  setup_systray_icon.sh  test_permissions.sh  update_xcode_icons.sh  upgrade_cmake_debian.sh  verify_icons.sh
src/cli/: 3blindmice.swift
src/hipaa/: HIPAADataManager.swift
web/: .gitignore  Dockerfile  README.md  cloudflared-config.yml  demo.html  fly.toml  package-lock.json  package.json  push.sh  server.js  start.sh
web/js-dos-custom/: custom-dosbox.js  js-dos-api-refactored.js
web/public/: app.js  config.js  index.html  mouse-tracker.js  ui-manager.js
windows/: CMakeLists.txt  README.md  TEST_RESULTS.md  build.bat  run.bat  test_windows.sh
windows/src/cpp/: display_manager.cpp  display_manager.h  hid_manager.cpp  hid_manager.h
windows/src/swift/: DisplayManager.swift  MultiMouseManager.swift  main.swift
